[gd_scene load_steps=60 format=3 uid="uid://bppttnio0gv2h"]

[ext_resource type="Script" path="res://Char/TonyFox/tony_fox.gd" id="1_rosge"]
[ext_resource type="Texture2D" uid="uid://bortc884nt6mk" path="res://assets/Player/sprites/player.png" id="2_lp6mc"]
[ext_resource type="Texture2D" uid="uid://b7ylhu4vcrb0" path="res://assets/Player/sprites/player_attack1.png" id="3_e0h6o"]
[ext_resource type="Texture2D" uid="uid://c2xsgybjvs0j5" path="res://assets/Player/sprites/player_attack2.png" id="4_k8glw"]
[ext_resource type="Texture2D" uid="uid://citqdph2v21ub" path="res://assets/Player/sprites/player_attack5.png" id="5_qaw5b"]
[ext_resource type="Texture2D" uid="uid://dt0sw2tfvpnod" path="res://assets/Player/sprites/player_attack6.png" id="6_t6dky"]
[ext_resource type="Texture2D" uid="uid://2jv1ymkjfmhu" path="res://assets/Player/sprites/n-sword_idle-sheet.png" id="7_a2esf"]
[ext_resource type="Texture2D" uid="uid://gkfxdvsgqomj" path="res://assets/Player/sprites/sword_jump.png" id="8_mk8lf"]
[ext_resource type="Texture2D" uid="uid://botoa88hr0byw" path="res://assets/Player/sprites/sword_run.png" id="9_a188b"]
[ext_resource type="Script" path="res://scripts/Hitbox.gd" id="10_et60y"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_htko2"]
radius = 11.0
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rwvbv"]
radius = 8.0
height = 20.0

[sub_resource type="AtlasTexture" id="AtlasTexture_p7lf5"]
atlas = ExtResource("2_lp6mc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jdm5"]
atlas = ExtResource("2_lp6mc")
region = Rect2(33, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0k0bi"]
atlas = ExtResource("2_lp6mc")
region = Rect2(66, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tboul"]
atlas = ExtResource("2_lp6mc")
region = Rect2(99, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_155xq"]
atlas = ExtResource("2_lp6mc")
region = Rect2(0, 160, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_thw6m"]
atlas = ExtResource("2_lp6mc")
region = Rect2(33, 160, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3lsm"]
atlas = ExtResource("2_lp6mc")
region = Rect2(165, 32, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_70qxa"]
atlas = ExtResource("2_lp6mc")
region = Rect2(0, 32, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg0pt"]
atlas = ExtResource("2_lp6mc")
region = Rect2(33, 32, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ck25i"]
atlas = ExtResource("2_lp6mc")
region = Rect2(66, 32, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgale"]
atlas = ExtResource("2_lp6mc")
region = Rect2(99, 32, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlnem"]
atlas = ExtResource("2_lp6mc")
region = Rect2(132, 32, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_keqtt"]
atlas = ExtResource("7_a2esf")
region = Rect2(0, 0, 64, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfgp1"]
atlas = ExtResource("7_a2esf")
region = Rect2(64, 0, 64, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuirm"]
atlas = ExtResource("7_a2esf")
region = Rect2(128, 0, 64, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8w7b"]
atlas = ExtResource("7_a2esf")
region = Rect2(192, 0, 64, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyt52"]
atlas = ExtResource("8_mk8lf")
region = Rect2(0, 0, 64, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_5h1kn"]
atlas = ExtResource("8_mk8lf")
region = Rect2(64, 0, 64, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_0c2xt"]
atlas = ExtResource("9_a188b")
region = Rect2(0, 0, 64, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_bd2pw"]
atlas = ExtResource("9_a188b")
region = Rect2(64, 0, 64, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_c75fg"]
atlas = ExtResource("9_a188b")
region = Rect2(128, 0, 64, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7lf0"]
atlas = ExtResource("9_a188b")
region = Rect2(192, 0, 64, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_guxn4"]
atlas = ExtResource("9_a188b")
region = Rect2(256, 0, 64, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_vo35v"]
atlas = ExtResource("9_a188b")
region = Rect2(320, 0, 64, 35)

[sub_resource type="SpriteFrames" id="SpriteFrames_rfmev"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7lf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jdm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0k0bi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tboul")
}],
"loop": true,
"name": &"Idle0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_155xq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thw6m")
}],
"loop": true,
"name": &"Jump0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3lsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70qxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg0pt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ck25i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgale")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlnem")
}],
"loop": true,
"name": &"Run0",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_e0h6o")
}, {
"duration": 1.0,
"texture": ExtResource("4_k8glw")
}, {
"duration": 1.0,
"texture": ExtResource("5_qaw5b")
}, {
"duration": 1.0,
"texture": ExtResource("6_t6dky")
}],
"loop": false,
"name": &"n-sword-atk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_keqtt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfgp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuirm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8w7b")
}],
"loop": true,
"name": &"n-sword-idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyt52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5h1kn")
}],
"loop": true,
"name": &"n-sword-jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0c2xt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bd2pw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c75fg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7lf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_guxn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vo35v")
}],
"loop": true,
"name": &"n-sword-run",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wrqpp"]
size = Vector2(21.5257, 22.1999)

[sub_resource type="Animation" id="Animation_kfrfk"]
resource_name = "Fall"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Jump0"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_qfu03"]
resource_name = "Fall_s"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"n-sword-jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_3d2nw"]
resource_name = "Idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle0"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_pfi3a"]
resource_name = "Idle_s"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"n-sword-idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 3]
}

[sub_resource type="Animation" id="Animation_fc5b3"]
resource_name = "Jump"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Jump0"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rdba6"]
resource_name = "Jump_s"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"n-sword-jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_16n2n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle0"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_855n0"]
resource_name = "Run"
length = 0.55
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Run0"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_y2sib"]
resource_name = "Run_s"
length = 0.55
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"n-sword-run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 4, 5]
}

[sub_resource type="Animation" id="Animation_l4gpu"]
resource_name = "sword_attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"n-sword-atk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_midw6"]
_data = {
"Fall": SubResource("Animation_kfrfk"),
"Fall_s": SubResource("Animation_qfu03"),
"Idle": SubResource("Animation_3d2nw"),
"Idle_s": SubResource("Animation_pfi3a"),
"Jump": SubResource("Animation_fc5b3"),
"Jump_s": SubResource("Animation_rdba6"),
"RESET": SubResource("Animation_16n2n"),
"Run": SubResource("Animation_855n0"),
"Run_s": SubResource("Animation_y2sib"),
"sword_attack": SubResource("Animation_l4gpu")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fch5m"]
animation = &"Fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lssxn"]
animation = &"Fall_s"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f7xka"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w16fa"]
animation = &"Idle_s"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_65fwd"]
animation = &"Jump_s"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ceywo"]
animation = &"Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3dqhx"]
animation = &"Run_s"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5dsm3"]
animation = &"sword_attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vfvft"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_0bwvf"]
states/Fall/node = SubResource("AnimationNodeAnimation_fch5m")
states/Fall/position = Vector2(267, 45)
states/Fall_s/node = SubResource("AnimationNodeAnimation_lssxn")
states/Fall_s/position = Vector2(647, 222)
states/Idle/node = SubResource("AnimationNodeAnimation_f7xka")
states/Idle/position = Vector2(490, 50)
states/Idle_s/node = SubResource("AnimationNodeAnimation_w16fa")
states/Idle_s/position = Vector2(387, 350)
states/Jump_s/node = SubResource("AnimationNodeAnimation_65fwd")
states/Jump_s/position = Vector2(765, 80)
states/Run/node = SubResource("AnimationNodeAnimation_ceywo")
states/Run/position = Vector2(927, 218)
states/Run_s/node = SubResource("AnimationNodeAnimation_3dqhx")
states/Run_s/position = Vector2(634, 178)
states/Start/position = Vector2(275, 382)
states/sword_attack/node = SubResource("AnimationNodeAnimation_5dsm3")
states/sword_attack/position = Vector2(237, 153)
transitions = ["sword_attack", "Idle_s", SubResource("AnimationNodeStateMachineTransition_vfvft")]

[node name="TonyFox" type="CharacterBody2D"]
script = ExtResource("1_rosge")

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_htko2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CapsuleShape2D_rwvbv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -8)
sprite_frames = SubResource("SpriteFrames_rfmev")
animation = &"Idle0"
frame = 1

[node name="SwordHitBox" type="Area2D" parent="AnimatedSprite2D"]
visible = false
position = Vector2(-1, 8)
script = ExtResource("10_et60y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/SwordHitBox"]
position = Vector2(18, -1)
rotation = -1.5708
shape = SubResource("RectangleShape2D_wrqpp")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.8, 1.8)
process_callback = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_midw6")
}
speed_scale = 0.8

[node name="JumpAud" type="AudioStreamPlayer2D" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_midw6")
}
tree_root = SubResource("AnimationNodeStateMachine_0bwvf")
anim_player = NodePath("../AnimationPlayer")

[node name="AnimationTree" type="AnimationTree" parent="AnimationTree"]
libraries = {
"": SubResource("AnimationLibrary_midw6")
}
tree_root = SubResource("AnimationNodeStateMachine_0bwvf")
anim_player = NodePath("../AnimationPlayer")

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="AnimatedSprite2D/SwordHitBox" to="." method="_on_sword_hit_box_area_entered"]
